# rust-admin

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
api/: Cargo.toml
api/src/: lib.rs  route.rs
api/src/common/: common.rs  mod.rs
api/src/system/: mod.rs  sys_user.rs
bootstrap/: Cargo.toml
bootstrap/src/: main.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/common/: res.rs
domain/src/system/: auth.rs
rfcs/: 001_architecture.md  002_login_auth.md  template.md
