[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
domain = { path = "../domain" }
service = { path = "../service" }
axum = { version = "0.6.4", features = ["headers"] }
headers = "0.3.8"
jsonwebtoken = "8.2.0"
tokio = { version = "1.0.2", features = ["full"] }
